// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`companyName props 1`] = `
Array [
  <h1>
    Hello World
  </h1>,
  <p>
    company: 
    Ubisoft
  </p>,
  <button
    onClick={[Function]}
  >
    you never clicked me
  </button>,
]
`;

exports[`default props 1`] = `
Array [
  <h1>
    Hello World
  </h1>,
  <button
    onClick={[Function]}
  >
    you never clicked me
  </button>,
]
`;

exports[`simulate click on button 1`] = `
Array [
  <h1>
    Hello World
  </h1>,
  <p>
    company: 
    Ubisoft
  </p>,
  <button
    onClick={[Function]}
  >
    you clicked me
  </button>,
]
`;
